# sword-layers

./: Cargo.toml  README.md
src/: content_type.rs  helmet.rs  lib.rs  not_found.rs  prelude.rs  utils.rs
src/body_limit/: config.rs  layer.rs
src/compression/: compression.rs  config.rs  layer.rs
src/cors/: config.rs  cors.rs  layer.rs
src/limits/: body.rs  mod.rs  timeout.rs
src/req_timeout/: config.rs  layer.rs
src/request_id/: layer.rs
src/servedir/: config.rs  layer.rs  servedir.rs
src/socketio/: config.rs  layer.rs
