[package]
name = "sword-layers"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-helmet = "0.2.0"
axum_responses = "0.5.3"
byte-unit = "5.2.0"
console = "0.16.1"
duration-str = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }

tower = "0.5.2"
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
tower-http = { version = "0.6.8", features = [
    "limit",
    "timeout",
    "cors",
    "fs",
    "compression-full",
    "request-id",
] }

tower-layer = "0.3.3"
