[package]
name = "sword-layers"
version = "0.1.5"
edition = "2024"
authors = ["luciano revillod <lrevillod2022@alu.uct.cl>"]
description = "Tower layers for the Sword web framework"
repository = "https://github.com/sword-web/sword-layers"
homepage = "https://github.com/sword-web"
documentation = "https://docs.rs/sword-layers"
keywords = ["sword", "web", "framework", "axum", "tower"]
categories = ["web-programming", "web-programming::http-server"]
readme = "./README.md"
license = "MIT"

[features]
default = []
helmet = ["dep:axum-helmet"]

[dependencies]
axum = "0.8.7"
axum-helmet = { version = "0.2.0", optional = true }
axum_responses = "0.5.4"
byte-unit = "5.2.0"
console = "0.16.1"
duration-str = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }

tower = "0.5.2"
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
tower-http = { version = "0.6.8", features = [
    "limit",
    "timeout",
    "cors",
    "fs",
    "compression-full",
    "request-id",
] }

tower-layer = "0.3.3"
uuid = { version = "1.19.0", features = ["v4"] }
